0.9.0 (currently working on)
- [#2619] Cleanup: Refactor tx_seminars_pi2
- [#3445] Fix: Events with nonzero number of max registrations not shown if "show only events with vacancies" is checked
- [#3440] Fix: Crash in the flexforms: Class not found
- [#3295] Change: Hide the cancel/confirm buttons in the BE module if the logged-in user has no write access
- [#3438] Change: The "hide fully-booked events" filter should hide events even if they have a waiting list
- [#3204] Fix: In the confirmation step of the registration process price and payment method are shown even if disabled, original patch by Donatas Elvikis
- [#3333] Fix: Unused variable $formData in eventEditor_testcase::test_eventEditorForEventHiddenBeforeEditing_DoesNotSendMail
- [#3334] Fix: Unused variable $secondEventUid in pi2_testcase::testCreateAndOutputListOfEventsHasResultEndingWithCariageReturnAndLineFeed
- [#3224] Fix: Make sure all <script> tags have proper CDATA
- [#3429] Change: Use the flag useStoragePid when filtering records by GRSP in the flexforms and the FE editor
- [#3295] Fix: Hide the cancel/confirm buttons in the BE module if the logged-in user has no write access
- [#3425] Fix: Kids dropdown in step 1 missing 0 or "none" selection.  Only has choice of 1,2,3,4 or 5
- [#3411] Fix: All data from the selector widget should be safeguarded
- [#3408] Feature: Add a flexforms setting for limiting the list view to certain organizers
- [#3400] Feature: Add two price fields to the search widget
- [#3398] Feature: Add a search widget for the organizers
- [#3396] Feature: Add an "age" field to the search widget and search for that age
- [#3399] Feature: Add functions "limitToMinimumPrice" and "limitToMaximumPrice" to the seminarBagBuilder
- [#3395] Feature: Add a function for limiting the seminar bag to a certain age
- [#3397] Feature: Add a function seminarBagBuilder::limitToOrganizers
- [#3221] Change: Move the JavaScript code for resetting the search widget to tx_seminars_pi1.js