@@ -334,7 +334,6 @@ CREATE TABLE tx_seminars_speakers (
 	homepage tinytext,
 	description text,
 	skills int(11) unsigned DEFAULT '0' NOT NULL,
-	picture blob,
 	notes text,
 	address text,
 	phone_work tinytext,
