@@ -1,4 +1,5 @@
 0.9.0 (currently working on)
+- [#3279] Change: Drop the picture from the speakers SQL and TCA
 - [#2619] Cleanup: Refactor tx_seminars_pi2
 - [#3445] Fix: Events with nonzero number of max registrations not shown if "show only events with vacancies" is checked
 - [#3440] Fix: Crash in the flexforms: Class not found
